--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="container">
       <div class="card">
         <h1>Mr. Trololo</h1>
-        <img src="images/profile_picture.png" alt="Profile picture" id = "avatar">
+        <iframe  id = "avatar" width="200" height="200" src="https://www.youtube.com/embed/oavMtUWDBTM?list=RDoavMtUWDBTM" title="YouTube video player" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+        <!-- <img src="images/profile_picture.png" alt="Profile picture" id = "avatar"> -->
         <h2>Eduard Anatolyevich Jil - Baritone Singer</h2>
         <p>Having finished my carrer as a singer, now I offer my services as a programmer for any kinds of projects. My expertise in companies such as Google, Netflix, Facebook and Amazon makes me the perfect fit for your team. Don't hesitate to contact me! </p>
         <a href="https://www.youtube.com/watch?v=oavMtUWDBTM&list=RDoavMtUWDBTM&start_radio=1" target="_blank" class="button">Contact me</a>
